Added more complex and poerful jquery controlled showing and hiding of one div relative to another.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,234 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 </head>
 <body unresolved>
   <div id="main">
+<!-- Here is the main area of the document, the following are being used for testing purposes. -->
+
+<div class="mainContainer">
+  <div id="bigcontainer" class="container">
+    <div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="1new][0-chk">
+          <input id="1new][0-chk" type="checkbox" value="1">
+          Getting Started in Canvas
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="2new][0-chk">
+          <input id="2new][0-chk" type="checkbox" value="1">
+          Assessing Students in Canvas
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="3new][0-chk">
+          <input id="3new][0-chk" type="checkbox" value="1">
+          Respondus
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="4new][0-chk">
+          <input id="4new][0-chk" type="checkbox" value="1">
+          StudyMate
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="5new][0-chk">
+          <input id="5new][0-chk" type="checkbox" value="1">
+          LessonBuilder
+        </label>
+      </div>
+      <div id="smallcontainer">
+        <input type="hidden" value="0">
+        <label for="other5554">
+          <input id="other5554" type="checkbox" value="1" class="oneother">
+          Other
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div style="display:none;">
+    <div>
+      <label for="applicants[new][0][allSemOnline]">Description</label>
+      <textarea rows="3" name="applicants[new][0][allSemOnline]" cols="50" id="applicants[new][0][allSemOnline]"></textarea>
+    </div>
+  </div>
+</div>
+
+
+<div class="mainContainer">
+  <div id="bigcontainer" class="container">
+    <div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="1new][0-chk">
+          <input id="1new][0-chk" type="checkbox" value="1">
+          Getting Started in Canvas
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="2new][0-chk">
+          <input id="2new][0-chk" type="checkbox" value="1">
+          Assessing Students in Canvas
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="3new][0-chk">
+          <input id="3new][0-chk" type="checkbox" value="1">
+          Respondus
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="4new][0-chk">
+          <input id="4new][0-chk" type="checkbox" value="1">
+          StudyMate
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="5new][0-chk">
+          <input id="5new][0-chk" type="checkbox" value="1">
+          LessonBuilder
+        </label>
+      </div>
+      <div id="smallcontainer">
+        <input type="hidden" value="0">
+        <label for="other555">
+          <input id="other555" type="checkbox" value="1" class="oneother">
+          Other
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div style="display:none;">
+    <div>
+      <label for="applicants[new][0][allSemOnline]">Description</label>
+      <textarea rows="3" name="applicants[new][0][allSemOnline]" cols="50" id="applicants[new][0][allSemOnline]"></textarea>
+    </div>
+  </div>
+</div>
+
+
+<div class="mainContainer">
+  <div id="bigcontainer" class="container">
+    <div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="1new][0-chk">
+          <input id="1new][0-chk" type="checkbox" value="1">
+          Getting Started in Canvas
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="2new][0-chk">
+          <input id="2new][0-chk" type="checkbox" value="1">
+          Assessing Students in Canvas
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="3new][0-chk">
+          <input id="3new][0-chk" type="checkbox" value="1">
+          Respondus
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="4new][0-chk">
+          <input id="4new][0-chk" type="checkbox" value="1">
+          StudyMate
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="5new][0-chk">
+          <input id="5new][0-chk" type="checkbox" value="1">
+          LessonBuilder
+        </label>
+      </div>
+      <div id="smallcontainer">
+        <input type="hidden" value="0">
+        <label for="other55">
+          <input id="other55" type="checkbox" value="1" class="oneother">
+          Other
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div style="display:none;">
+    <div>
+      <label for="applicants[new][0][allSemOnline]">Description</label>
+      <textarea rows="3" name="applicants[new][0][allSemOnline]" cols="50" id="applicants[new][0][allSemOnline]"></textarea>
+    </div>
+  </div>
+</div>
+
+
+<div class="mainContainer">
+  <div id="bigcontainer" class="container">
+    <div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="1new][0-chk">
+          <input id="1new][0-chk" type="checkbox" value="1">
+          Getting Started in Canvas
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="2new][0-chk">
+          <input id="2new][0-chk" type="checkbox" value="1">
+          Assessing Students in Canvas
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="3new][0-chk">
+          <input id="3new][0-chk" type="checkbox" value="1">
+          Respondus
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="4new][0-chk">
+          <input id="4new][0-chk" type="checkbox" value="1">
+          StudyMate
+        </label>
+      </div>
+      <div>
+        <input type="hidden" value="0">
+        <label for="5new][0-chk">
+          <input id="5new][0-chk" type="checkbox" value="1">
+          LessonBuilder
+        </label>
+      </div>
+      <div id="smallcontainer">
+        <input type="hidden" value="0">
+        <label for="other5">
+          <input id="other5" type="checkbox" value="1" class="oneother">
+          Other
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div style="display:none;">
+    <div>
+      <label for="applicants[new][0][allSemOnline]">Description</label>
+      <textarea rows="3" name="applicants[new][0][allSemOnline]" cols="50" id="applicants[new][0][allSemOnline]"></textarea>
+    </div>
+  </div>
+</div>
 
     <!--
     Everything from here to the <script> tag below is the skeleton of your
@@ -56,7 +284,6 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     <div style='clear: both;'></div>
     <div id="workExperience" class='gray'>
       <h2>Work Experience</h2>
-      <input type="checkbox" id="checkBoxId" >
     </div>
     <div id="projects">
       <h2>Projects</h2>
