test zed editing capability

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 
   <div style="display:none;">
     <div>
+        <strong>Hello from Zed commits!!!</strong>
       <label for="applicants[new][0][allSemOnline]">Description</label>
       <textarea rows="3" name="applicants[new][0][allSemOnline]" cols="50" id="applicants[new][0][allSemOnline]"></textarea>
     </div>
