added a pic of peanut

--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     </div>
   </div>
 
+
+
   <div style="display:none;">
+    <img src="images/peanut.jpg" width="200">
     <div>
       <label for="applicants[new][0][allSemOnline]">Description</label>
       <textarea rows="3" name="applicants[new][0][allSemOnline]" cols="50" id="applicants[new][0][allSemOnline]"></textarea>
@@ -102,175 +105,9 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 </div>
 
 
-<div class="mainContainer">
-  <div id="bigcontainer" class="container">
-    <div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="1new][0-chk">
-          <input id="1new][0-chk" type="checkbox" value="1">
-          Getting Started in Canvas
-        </label>
-      </div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="2new][0-chk">
-          <input id="2new][0-chk" type="checkbox" value="1">
-          Assessing Students in Canvas
-        </label>
-      </div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="3new][0-chk">
-          <input id="3new][0-chk" type="checkbox" value="1">
-          Respondus
-        </label>
-      </div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="4new][0-chk">
-          <input id="4new][0-chk" type="checkbox" value="1">
-          StudyMate
-        </label>
-      </div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="5new][0-chk">
-          <input id="5new][0-chk" type="checkbox" value="1">
-          LessonBuilder
-        </label>
-      </div>
-      <div id="smallcontainer">
-        <input type="hidden" value="0">
-        <label for="other555">
-          <input id="other555" type="checkbox" value="1" class="oneother">
-          Other
-        </label>
-      </div>
-    </div>
-  </div>
-
-  <div style="display:none;">
-    <div>
-      <label for="applicants[new][0][allSemOnline]">Description</label>
-      <textarea rows="3" name="applicants[new][0][allSemOnline]" cols="50" id="applicants[new][0][allSemOnline]"></textarea>
-    </div>
-  </div>
-</div>
 
 
-<div class="mainContainer">
-  <div id="bigcontainer" class="container">
-    <div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="1new][0-chk">
-          <input id="1new][0-chk" type="checkbox" value="1">
-          Getting Started in Canvas
-        </label>
-      </div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="2new][0-chk">
-          <input id="2new][0-chk" type="checkbox" value="1">
-          Assessing Students in Canvas
-        </label>
-      </div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="3new][0-chk">
-          <input id="3new][0-chk" type="checkbox" value="1">
-          Respondus
-        </label>
-      </div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="4new][0-chk">
-          <input id="4new][0-chk" type="checkbox" value="1">
-          StudyMate
-        </label>
-      </div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="5new][0-chk">
-          <input id="5new][0-chk" type="checkbox" value="1">
-          LessonBuilder
-        </label>
-      </div>
-      <div id="smallcontainer">
-        <input type="hidden" value="0">
-        <label for="other55">
-          <input id="other55" type="checkbox" value="1" class="oneother">
-          Other
-        </label>
-      </div>
-    </div>
-  </div>
 
-  <div style="display:none;">
-    <div>
-      <label for="applicants[new][0][allSemOnline]">Description</label>
-      <textarea rows="3" name="applicants[new][0][allSemOnline]" cols="50" id="applicants[new][0][allSemOnline]"></textarea>
-    </div>
-  </div>
-</div>
-
-
-<div class="mainContainer">
-  <div id="bigcontainer" class="container">
-    <div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="1new][0-chk">
-          <input id="1new][0-chk" type="checkbox" value="1">
-          Getting Started in Canvas
-        </label>
-      </div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="2new][0-chk">
-          <input id="2new][0-chk" type="checkbox" value="1">
-          Assessing Students in Canvas
-        </label>
-      </div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="3new][0-chk">
-          <input id="3new][0-chk" type="checkbox" value="1">
-          Respondus
-        </label>
-      </div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="4new][0-chk">
-          <input id="4new][0-chk" type="checkbox" value="1">
-          StudyMate
-        </label>
-      </div>
-      <div>
-        <input type="hidden" value="0">
-        <label for="5new][0-chk">
-          <input id="5new][0-chk" type="checkbox" value="1">
-          LessonBuilder
-        </label>
-      </div>
-      <div id="smallcontainer">
-        <input type="hidden" value="0">
-        <label for="other5">
-          <input id="other5" type="checkbox" value="1" class="oneother">
-          Other
-        </label>
-      </div>
-    </div>
-  </div>
-
-  <div style="display:none;">
-    <div>
-      <label for="applicants[new][0][allSemOnline]">Description</label>
-      <textarea rows="3" name="applicants[new][0][allSemOnline]" cols="50" id="applicants[new][0][allSemOnline]"></textarea>
-    </div>
-  </div>
-</div>
 
     <!--
     Everything from here to the <script> tag below is the skeleton of your
