Added files and code from codecademy and Udacity

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 <body unresolved>
   <div id="main">
 <!-- Here is the main area of the document, the following are being used for testing purposes. -->
+<a href="creating_html_elements.html">Create HTML Elements</a>
+<a href="jquery_events.html">jQuery Events</a>
 
 <div class="mainContainer">
   <div id="bigcontainer" class="container">
