added an example page for acknowledgemnets and some other codecademy lessons

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 <!-- Here is the main area of the document, the following are being used for testing purposes. -->
 <a href="creating_html_elements.html">Create HTML Elements</a>
 <a href="jquery_events.html">jQuery Events</a>
+<a href="example_ack.html">Example acknowledgements</a>
 
 <div class="mainContainer">
   <div id="bigcontainer" class="container">
@@ -194,6 +195,10 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <script src="js/resumeBuilder.js"></script>
 <!-- Load bootstrap js file -->
   <script src="js/bootstrap.min.js"></script>
+  <!-- Load jQuery UI library script remotely -->
+  <!-- <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script> -->
+  <!-- The related stylesheet for jQuery UI library -->
+  <!-- <link rel='stylesheet' type='text/css' href='http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css'/> -->
 
   <script type="text/javascript">
     if(document.getElementsByClassName('flex-item').length === 0) {
