--- a/creating_html_elements.html
+++ b/creating_html_elements.html
@@ -19,7 +19,8 @@
         <div id="text">Highlight me, too!</div> -->
 
         <!-- <div><p>I'm about to change!</p></div> -->
-
+        <p>Add items by filling and pressing the button</p>
+        <p>delete items by clicking the item</p>
         <h2>To Do</h2>
 		<form name="checkListForm">
 			<input type="text" name="checkListItem"/>
