--- a/jquery_events.html
+++ b/jquery_events.html
@@ -24,7 +24,7 @@
         <!--3. <form>
 			Name: <input type='text' name='name'></input>
 		</form> -->
-
+		<p>Press directional buttons to operate.</p>
 		<img src="http://i1061.photobucket.com/albums/t480/ericqweinstein/mario.jpg"/>
 	</body>
 </html>
