Added a the sortable jquery effect to the todo list to demonstrate proper use of the jquery UI library

--- a/creating_html_elements.html
+++ b/creating_html_elements.html
@@ -27,7 +27,13 @@
 		</form>
 		<div id="button">Add!</div>
 		<br/>
-		<div class="list"></div>
+		<ul class="list"></ul>
         
 	</body>
+
+	<!-- Load jQuery UI library script remotely -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+  
+  <!-- The related stylesheet for jQuery UI library -->
+  <link rel='stylesheet' type='text/css' href='http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css'/>
 </html>
