--- a/index.html
+++ b/index.html
@@ -195,10 +195,15 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <script src="js/resumeBuilder.js"></script>
 <!-- Load bootstrap js file -->
   <script src="js/bootstrap.min.js"></script>
+
   <!-- Load jQuery UI library script remotely -->
-  <!-- <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script> -->
+  <!-- <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script> -->
+
   <!-- The related stylesheet for jQuery UI library -->
   <!-- <link rel='stylesheet' type='text/css' href='http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css'/> -->
+
+  <!-- Load the jQuery library from the web -->
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
 
   <script type="text/javascript">
     if(document.getElementsByClassName('flex-item').length === 0) {
