--- a/pages/dads_page.html
+++ b/pages/dads_page.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<meta name="viewport" content="width=device-width">
 	<title>The Concierge</title>
@@ -17,11 +17,8 @@
 ===================================================================== -->
 
 
-<div id="index list" class="jumbotron">
-	<h1 id="heading">Home Page</h1>
-</div>
 
-<ul id="sidebar" class="col-sm-3 well">
+<ul id="link-list" class="col-sm-3 well">
 </ul>
 
 
@@ -32,7 +29,10 @@
 ===================================================================== -->
 </body>
 <footer>
-	<link rel="stylesheet" type="text/css" href="css/mine/style.css">
-	<script type="text/javascript" src="js/mine/mine.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/mine/style.css">
+	
+	<script type="text/javascript">
+
+	</script>
 </footer>
 </html>
