added dad's fathers day page.

--- a/index.html
+++ b/index.html
@@ -10,26 +10,31 @@
 	<title>The Concierge</title>
 </head>
 <body class="container">
-<!-- =====================================================================
+<!-- 
+=====================================================================
 ===============                               =======================
 ==============   Body of the main index page   ======================
 ===============                               =======================
-===================================================================== -->
+===================================================================== 
+-->
 
 
 <div id="index list" class="jumbotron">
 	<h1 id="heading">Home Page</h1>
+	<p>Welcome to the home pgae of my shit little test app.</p>
 </div>
 
-<ul id="sidebar" class="col-sm-3 well">
+<ul id="sidebar" class="col-sm-3 col-md-3 col-lg-2 well">
 </ul>
 
 
-<!-- =====================================================================
+<!-- 
 =====================================================================
 =====================================================================
 =====================================================================
-===================================================================== -->
+=====================================================================
+=====================================================================
+-->
 </body>
 <footer>
 	<link rel="stylesheet" type="text/css" href="css/mine/style.css">
