--- a/old-index-and-experiments/chktest.html
+++ b/old-index-and-experiments/chktest.html
@@ -1,54 +1,41 @@
-<div class="checkContainer">
-	<div>
-		<div>
-			<input type="hidden" value="0">
-			<label for="1new][0-chk">
-				<input id="1new][0-chk" type="checkbox" value="1">
-				Getting Started in Canvas
-			</label>
-		</div>
-		<div>
-			<input type="hidden" value="0">
-			<label for="2new][0-chk">
-				<input id="2new][0-chk" type="checkbox" value="1">
-				Assessing Students in Canvas
-			</label>
-		</div>
-		<div>
-			<input type="hidden" value="0">
-			<label for="3new][0-chk">
-				<input id="3new][0-chk" type="checkbox" value="1">
-				Respondus
-			</label>
-		</div>
-		<div>
-			<input type="hidden" value="0">
-			<label for="4new][0-chk">
-				<input id="4new][0-chk" type="checkbox" value="1">
-				StudyMate
-			</label>
-		</div>
-		<div>
-			<input type="hidden" value="0">
-			<label for="5new][0-chk">
-				<input id="5new][0-chk" type="checkbox" value="1">
-				LessonBuilder
-			</label>
-		</div>
-		<div>
-			<input type="hidden" value="0">
-			<label for="othernew][0-chk">
-				<input id="othernew][0-c6]" type="checkbox" value="1">
-				Other
-			</label>
-		</div>
-	</div>
-</div>
+<!DOCTYPE html>
 
-<div>
-	<div>
-		<label for="applicants[new][0][allSemOnline]">Description</label>
-		<textarea rows="3" name="applicants[new][0][allSemOnline]" cols="50" id="applicants[new][0][allSemOnline]"></textarea>
 
-	</div>
-</div>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<meta name="viewport" content="width=device-width">
+		<title>The Concierge</title>
+	</head>
+	<body class="container">
+
+
+		<div>
+			<input type="checkbox">test</input>
+		</div>
+
+
+	</body>
+	<footer>
+		<link rel="stylesheet" type="text/css" href="../css/mine/style.css">
+		<script type="text/javascript">
+			$(document).ready(function()
+				{
+					console.log('ready...');
+					$('div').on('click', 'input', function()
+						{
+							prompter();
+							confirm('test');
+						});
+				});
+
+			function prompter()
+			{
+				console.log('activated');
+				var response = prompt('Give me input', 'test');
+				console.log(response);
+			}
+		</script>
+	</footer>
+</html>
